# tinyoas

./: .gitignore  Cargo.toml  LICENSE  README.md
src/tinyoas/: cli.rs  commands.rs  errors.rs  lib.rs
src/tinyoas/oas_path/: source.rs  target.rs
src/tinyoas/util/: command_prelude.rs  errors.rs  mod.rs
