[package]
name = "tinyoas"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/eithery/tinyoas"
readme = "README.md"
description = """
tinyoas, CLI toolbox supporting YAML documents in tinyOAS format
"""

[lib]
name = "tinyoas"
path = "src/tinyoas/lib.rs"

[[bin]]
name = "tinyoas"
test = false
doc = false

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["cargo"] }
