[package]
name = "tinyoas"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/eithery/tinyoas"
readme = "README.md"
description = """
tinyoas, CLI toolbox supporting YAML documents in tinyOAS format
"""

[lib]
name = "tinyoas"
path = "src/tinyoas/lib.rs"

[[bin]]
name = "tinyoas"
test = false
doc = false

[dependencies]
chrono = "0.4"
clap = { version = "3.2", features = ["cargo"] }
owo-colors = "3.5"
walkdir = "2.3"
